fix: filterbar close button visibility bug

--- a/styles/devices/others.css
+++ b/styles/devices/others.css
@@ -4,4 +4,8 @@
         display: none;
     }
 
+    .filters__button--close {
+        display: none;
+    }
+
 }
